--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git clone https://x-access-token:${GITHUB_TOKEN}@github.com/chinhld12/websites-engine.git
-          cd websites-engine
-          git checkout main
+          cp -R websites-engine/* .
+          rm -rf websites-engine
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
