--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Clone Remote Repository
+name: Build and Deploy
 
 on:
   push:
@@ -6,8 +6,12 @@ on:
       - main
 
 jobs:
-  clone-repo:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
     steps:
       - name: Checkout this repository
         uses: actions/checkout@v4
