--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/chinhld12/websites-engine.git
-          cp -R websites-engine/* .
-          rm -rf websites-engine
+          git clone https://x-access-token:${GITHUB_TOKEN}@github.com/dwarvesf/web-engine.git
+          cp -R web-engine/* .
+          rm -rf web-engine
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
